--- a/PCHUBStore/Views/Partial/Products/ProductsPartial.cshtml
+++ b/PCHUBStore/Views/Partial/Products/ProductsPartial.cshtml
@@ -32,7 +32,10 @@
                     <img src="~/img/shoppingCart.png" style="width: 50px; height: 50px;" alt="Alternate Text" />
                     @if (this.User.Identity.IsAuthenticated)
                     {
+                        if (this.User.IsInRole("StoreUser"))
+                        {
                         <a class="btn btn-info" role="button" asp-controller="ShoppingCart" asp-action="BuyProduct" asp-route-id="@product.Id">Add To Cart</a>
+                        }
                     }
                     else
                     {
