--- a/PCHUBStore/Views/Shared/_Layout.cshtml
+++ b/PCHUBStore/Views/Shared/_Layout.cshtml
@@ -38,10 +38,13 @@
             <div style="height:60px;" class="col-sm-6 col-lg-2">
                 @if (this.User.Identity.IsAuthenticated)
                 {
-                    <a style="display: inline-block" class="nav-link text-white" asp-controller="ShoppingCart" asp-action="ReviewCart">
-                        <img src="~/img/shoppingCart.png" style="width: 50px; height: 50px; z-index: 1" alt="Alternate Text" />
-                        <span id="cartNumberOfProducts" style="background-color:#152b53; color:#fff; padding:4px; font-weight:bold;">7</span>
-                    </a>
+                    if (this.User.IsInRole("StoreUser"))
+                    {
+                        <a style="display: inline-block" class="nav-link text-white" asp-controller="ShoppingCart" asp-action="ReviewCart">
+                            <img src="~/img/shoppingCart.png" style="width: 50px; height: 50px; z-index: 1" alt="Alternate Text" />
+                            <span id="cartNumberOfProducts" style="background-color:#152b53; color:#fff; padding:4px; font-weight:bold;"></span>
+                        </a>
+                    }
                 }
                 else
                 {
